# twitter-scraper

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  stack.yaml  twitter-scraper.cabal
app/: Main.hs
output/: companies.csv
src/: Company.hs  TweetJSON.hs  TwitterScraper.hs
test/: Main.hs
