name:                twitter-scraper
version:             0.1.0.0
synopsis:            Scrape all Twitter search results across a given time period.
license:             BSD3
license-file:        LICENSE
author:              Xander Dunn
maintainer:          xander.dunn@icloud.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     TwitterScraper
  build-depends:       base, scalpel, json, time, cassava, bytestring, directory, filepath, vector, system-fileio, text, lens
  hs-source-dirs:      src
  default-language:    Haskell2010

executable scrape-twitter
  main-is:           Main.hs
  build-depends:     base, twitter-scraper, directory, filepath, vector
  default-language:  Haskell2010
  hs-source-dirs:    app
